# sysforge

./: .README.md.swp  .cookiecutter.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: conf.py  index.md  reference.md  usage.md  user-backup-restore-plan.md
docs/examples/: development-profile.yaml  gitignore-overrides-example.yaml  personal-profile.yaml  user-backup-config.yaml
scripts/: run-act-tests.sh
src/sysforge/: __init__.py  __main__.py  cli.py  config.py
src/sysforge/backup/: __init__.py  cli.py  compression.py  config.py  core.py  filters.py  git.py  restore.py
src/sysforge/core/: __init__.py  system.py
src/sysforge/utils/: formatting.py
tests/: __init__.py  test_cli.py  test_formatting.py  test_main.py  test_system.py
tests/integration/backup/: test_end_to_end.py  test_git_backup_integration.py
tests/unit/backup/: test_benchmark.py  test_config.py  test_filters.py  test_git.py  test_gitignore_support.py  test_parallel_performance.py  test_restore.py
